<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_team_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MenuActivity$CreateFragment" >

        <EditText
            android:id="@+id/project_name"
            android:hint="@string/hint_proj_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_single"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <RadioGroup
            android:id="@+id/radio_group_pie_sections" 
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/project_name"
		    android:orientation="vertical">
		    
		    <RadioButton android:id="@+id/radio_six"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/radio_six"
		        style="@style/label_text_style" />
		    <RadioButton android:id="@+id/radio_eight"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/radio_eight"
		        style="@style/label_text_style" />
		</RadioGroup>
        
        <EditText
            android:id="@+id/skill_name1"
            android:hint="@string/hint_skill_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_pie_sections"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_top_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name2"
            android:hint="@string/hint_skill_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name3"
            android:hint="@string/hint_skill_name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name4"
            android:hint="@string/hint_skill_name4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name3"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name5"
            android:hint="@string/hint_skill_name5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name4"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name6"
            android:hint="@string/hint_skill_name6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name5"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name7"
            android:hint="@string/hint_skill_name7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name6"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/skill_name8"
            android:hint="@string/hint_skill_name8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name7"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bottom_bg"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_create"
            style="@style/button_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skill_name8"
            android:background="@drawable/button_blue"
            android:text="Create" />
    </RelativeLayout>

</ScrollView>
