<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/input_user"
            android:ems="10" >
        </EditText>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/register_password"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/input_lock"
            android:inputType="textPassword" >
        </EditText>
        
        <EditText
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_fname"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/input_bars"
            android:inputType="textPersonName" >
        </EditText>
        
        <EditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_lname"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/input_bars"
            android:inputType="textPersonName" >
        </EditText>
 
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/register_email"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/input_envelope"
            android:inputType="textEmailAddress" />

        
        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blue"
            style="@style/button_text_style"
            android:text="Sign Up" />

        <!-- Link to Login Screen -->
        <TextView
            android:id="@+id/link_to_login"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login_back"
            style="@style/link_text_style" />"

    </LinearLayout>

</ScrollView>